<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    tools:context="mis.korean.asselect.ShowWeightsActivity" >

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_select_actions"
                android:textAppearance="@style/MisTextHeader2"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_str"
                    android:textAppearance="@style/MisTextAppearance" />
                
                <Button
                    android:id="@+id/reset_prefs_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_preferences"
                    android:textAppearance="@style/MisTextAppearance" />
                
                <Button
                    android:id="@+id/show_weights_table_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_weights_table"
                    android:textAppearance="@style/MisTextAppearance" />
                
                <Button
                    android:id="@+id/show_active_weights_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_active_weights"
                    android:textAppearance="@style/MisTextAppearance" />
                </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_type"
                android:textAppearance="@style/MisTextHeader2"
                android:textSize="44sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/KoreanOrRussianGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp" >

                <RadioButton
                    android:id="@+id/Korean2RussianRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean_to_russian"
                    android:textAppearance="@style/MisTextAppearance" />

                <RadioButton
                    android:id="@+id/Russian2KoreanRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/russian_to_korean"
                    android:textAppearance="@style/MisTextAppearance" />

                <RadioButton
                    android:id="@+id/Russian2KoreanCharsRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/russian_to_korean_chars"
                    android:textAppearance="@style/MisTextAppearance" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/playKoreanCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_korean_words"
                android:textAppearance="@style/MisTextAppearance" />
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_language"
                android:textAppearance="@style/MisTextHeader2"
                android:textSize="44sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/OtherLanguageGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp" >

                <RadioButton
                    android:id="@+id/OtherRussian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/russian"
                    android:textAppearance="@style/MisTextAppearance" />

                <RadioButton
                    android:id="@+id/OtherEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textAppearance="@style/MisTextAppearance" />
            </RadioGroup>
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_dictionary"
                android:textAppearance="@style/MisTextHeader2"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/selectDictGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </TableRow>
    </TableLayout>

</ScrollView>